@@ -5054,6 +5054,9 @@ irreducible factors of $f$ are of degree at most $r$, $0$ otherwise.
 
 \fun{long}{Flx_nbfact}{GEN z, ulong p}, as \kbd{FpX\_nbfact}.
 
+\fun{long}{Flx_nbfact_Frobenius}{GEN f, GEN XP, ulong p},
+as \kbd{FpX\_nbfact\_Frobenius}.
+
 \fun{GEN}{Flx_degfact}{GEN f, ulong p}, as \kbd{FpX\_degfact}.
 
 \fun{GEN}{Flx_nbfact_by_degree}{GEN z, long *nb, ulong p} Assume
