@@ -562,6 +562,7 @@ int     Flx_is_irred(GEN f, ulong p);
 GEN     Flx_degfact(GEN f, ulong p);
 GEN     Flx_factor(GEN f, ulong p);
 long    Flx_nbfact(GEN z, ulong p);
+long    Flx_nbfact_Frobenius(GEN T, GEN XP, ulong p);
 GEN     Flx_nbfact_by_degree(GEN z, long *nb, ulong p);
 long    Flx_nbroots(GEN f, ulong p);
 ulong   Flx_oneroot(GEN f, ulong p);
